# eon

./: .dockerignore  .gitignore  CMakeLists.txt  Compute.hs  Consensus.hs  Dockerfile  QueryParser.hs  README.md  Schema.hs  bin_ops.go  compute.go  compute.hs  configuration.go  configuration.pb.go  configuration.proto  eon.cabal  eonctl  gen_bin_ops.py  main.hs  predicate.go  queryparser.hs  schema.hs
Compute/: RowStore.hs
compute/: bin_op_test.go  bin_ops.go  bin_ops_test.go  compute.go  gen_bin_ops.py  instruction_encoder_test.go  literal_ops.go  literal_ops_test.go  predicate.go
doc/howto/: Makefile  conf.py  index.rst  make.bat  oid.rst  overview.rst  storage.rst  storage_impl_1.rst  storage_impl_2.rst  storage_impl_3.rst  storage_implementation.rst  storage_language.rst
ds/: __main__.py  compute.py  engine.py  main.py  processor.py  remote.py  stream.py
ds/hash_ring/: __init__.py  hash_ring.py
ds/tests/: test_engine.py
engine/: Consensus.hs  HLint.hs  QueryParser.hs  eon.cabal  main.hs
engine/Compute/: Query.hs  RowStore.hs
engine/Parse/: Query.hs
engine/collection/: interval.py  iqs.py
engine/collection/tests/: test_interval.py
engine/column/: store.py
engine/column/storage/: arity_compress.py  simple.py  standard.py  varint.py
engine/column/storage/columnar/: __init__.py  memory.py  persistent.py  rtype.py
engine/column/storage/columnar/elements/: __init__.py  compact_memory.py  compact_persistent.py  compressed_memory.py  delta_memory.py  fast_memory.py  simple_memory.py
engine/column/storage/columnar/tests/: test_compact_memory_element.py  test_compressed_memory_element.py  test_delta_memory_element.py  test_element.py  test_fast_memory_element.py  test_membase.py
engine/column/storage/tests/: test_arity_compressed_store.py  test_standard_store.py
engine/io/: compressed.py
engine/io/tests/: test_compressed_reader.py  test_compressed_writer.py
engine/mover/: postgres_monet_driver.py
engine/schema/: datatype.py  isolation.py
eon/: __init__.py  __main__.py  instance.py
eon/client/: cluster.py  data.py  db.py  exception.py
eon/collection/: amortized.py
eon/collection/test/: test_amortized_array.py
eon/engine/data/: __init__.py  distributor.py  hash_ring.py  model.py
eon/engine/driver/: postgres.py
eon/engine/mover/: __init__.py  postgres_monet_driver.py
eon/error/: code.py  util.py
eon/error/messages/: en.py
eon/handlers/: common.py  db.py  query.py  table.py
eon/manager/: __main__.py  common.py  config.py  data_server.py  management_server.py
eon/manager/cold_store/: __init__.py
eon/manager/engine/: __init__.py  state.py
eon/manager/management/: __init__.py  api.py  health.py  metric.py
eon/manager/warm_store/: __init__.py
eon/query/: evaluate.py  parser.py  plan.py
eon/query/test/: test_evaluate.py  test_parser.py  test_plan.py
eon/schema/: column.py  data.py  db.py  store.py  table.py
eon/schema/test/: test_table.py
eon/store/: column.py  row.py
eon/store/test/: test_column.py  test_row.py
eon/util/: indent_writer.py
eond/: Cargo.toml
eond/src/: main.rs
manager/: eon
manager/eonmgr/: __main__.py  config.py  gen_dbe_cfg.py  getifaddrs.py  management_server.py
manager/eonmgr/cold_store/: __init__.py
manager/eonmgr/engine/: __init__.py  cfg.py  state.py
manager/eonmgr/management/: __init__.py  api.py  election.py  health.py  metric.py  nodeid.py  whisper.py
manager/eonmgr/warm_store/: __init__.py
manager/tests/: test_announce_presence.py  test_cold_store_management.py  test_election.py  test_health.py  test_metric.py  test_network_partition.py
query/: parser.go
src/: Main.hs
src/Engine/: Query.hs  main.hs
src/Store/: DataColumn.hs  FrozenDataColumn.hs  RowColumn.hs  Table.hs  Transaction.hs
src/store/: CMakeLists.txt  column_id.cpp  column_id.h  main.cpp  row_id.cpp  row_id.h  scalar_data.cpp  scalar_data.h
src/store/base/: row.cpp  row.h  segment.cpp  segment.h
src/store/mem/: mem_row.cpp  mem_row.h  mem_segment.cpp  mem_segment.h
src/store/stream/: context.cpp  context.h  expr.cpp  expr.h  op.h  predicate.cpp  predicate.h
store/: Cargo.toml
store/src/: lib.rs
store/src/memory/: fast.rs  mod.rs
test/: FrozenDataColumnSpec.hs  RowColumnSpec.hs  doctests.hs
tests/: ceph-mds@.service  ceph-mon@.service  ceph-osd@.service  client.py  config.rb  eon@.service  run.sh  setup-cluster.sh  teardown-cluster.sh  test_announce_presence.py  test_cold_store_management.py  test_configure_database_engine.py  test_election.py  test_hash_ring.py  test_health.py  test_metric.py  test_model_decorator.py  test_network_partition.py  test_postgres_data_driver.py  test_warm_store_management.py  user-data
tests/openstack/ops/: hosts  site.yml
tests/openstack/ops/roles/cluster/tasks/: main.yml
tests/provisioning/: cluster-setup.yml
tests/provisioning/roles/ceph/tasks/: main.yaml
tests/provisioning/roles/consul/tasks/: main.yaml
